# simulation-copilot

./: .gitignore  .pre-commit-config.yaml  LoanApp_simplified_train.json  Pipfile  README.md  pyproject.toml  pyrightconfig.json
simulation_copilot/: bps_model_simplified.py  clean_db.py  db.py  generating_calendars.py  generating_resource_model.py  resource_model.py  resource_model_agent.py  schemas.sql  simulation_model_agent.py  simulation_model_agent_sql.py  tables.py
simulation_copilot/bps_model/: batching.py  bps_model.py
simulation_copilot/lib/tools/: bps_model.py  calendar.py  resource_model.py  resource_profile.py
simulation_copilot/python_approach/: main.py
simulation_copilot/sql_approach/: clean_db.py  db.py  main.py
simulation_copilot/tools/: bps_model.py  calendar.py  resource_model.py  resource_profile.py  sql.py
src/cli/sql_approach/: anthropic_advanced_main.py  anthropic_beta.py  anthropic_graph_main.py  anthropic_main.py  clean_db.py  draw_data_model.py  init_db.py  llm_compiler_parser.py  main.py  utils.py
src/simulation_copilot/: database.py  prompts.py  prosimos_relational_adapter.py  prosimos_relational_repository.py  prosimos_relational_service.py  prosimos_to_relational_adapter.py  prosimos_utils.py  relational_to_prosimos_adapter.py
tests/: test_anthropic_conversation.py  test_prosimos_relational_adapter.py  test_prosimos_relational_repository.py  test_prosimos_relational_service.py  test_prosimos_to_relational_adapter.py  test_relational_to_prosimos_adapter.py  test_relational_to_prosimos_simulation.py
(+50 files in other folders)
