[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "simulation-copilot"
version = "0.2.0"
authors = [{ name = "Ihar Suvorau", email = "ihar.suvorau@gmail.com" }]
description = "Package for generating business process simulation models with LLMs"
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.9,<3.12"

[project.urls]
Homepage = "https://github.com/AutomatedProcessImprovement/simulation-copilot"

[tool.pylint.'MESSAGES CONTROL']
max-line-length = 120
disable = ""
good-names = "i,j,k,ex,Run,_,f,d"
